# mowglinext

./: .editorconfig  .env  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  SECURITY.md  build.sh  docker-compose.foxglove.yaml  docker-compose.override.yml  docker-compose.ser2net.yaml  docker-compose.yaml  docker-compose.yml  install.sh
.claude/: settings.json
.claude/memory/: MEMORY.md  project_e2e_status.md  user_cedric.md
.claude/rules/: ros2.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.githooks/: pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: _sensor-docker.yml  app-agent-docker.yml  app-proxy-docker.yml  app-server-docker.yml  app-web-ci.yml  auto-label.yml  build.yml  ci.yml  claude-improve.yml  claude-review.yml  claude.yml  create-planned-issues.yml  docker-publish-main.yml  docker-publish-upstream.yml  docker-publish.yml  docker.yml  firmware-ci.yml  gui-docker.yml  mobile-android.yml  mobile-ios.yml  pages.yml  ros2-ci.yml  ros2-docker.yml  sensors-docker.yml  sensors-gps.yml  sensors-lidar-ldlidar.yml  sensors-lidar-rplidar.yml  sensors-lidar-stl27l.yml  sensors-mavros.yml  sensors-unicore.yml  stale.yml  welcome.yml  wiki-update.yml
app/: package-lock.json  package.json
app/agent/: Dockerfile  go.mod  main.go
app/common/: package.json  tsconfig.json  tsconfig.tsbuildinfo
app/mobile/: .env.example  .gitignore  CI.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
app/proxy/: Caddyfile  Dockerfile  docker-compose.proxy.yaml  go.mod  go.sum  main.go
app/server/: Dockerfile  go.mod  main.go
app/web/: package.json  tsconfig.json  vite.config.ts
asserts/: mower_config.schema.json
cloud/firebase/: .env.example  .firebaserc  .gitignore  SETUP.md  firebase.json  firestore.rules
config/: cyclonedds.xml
config/mowgli/: mowgli_robot.yaml
config/om/: comms_params.yaml  mower_config.sh
docker/: .env.example  README.md  docker-compose.cloudflared.yaml  docker-compose.foxglove.yaml  docker-compose.yaml
docker/config/: cyclonedds.xml
docker/foxglove/: Dockerfile
docker/openmower/: Dockerfile
docker/openmower_upstream/: Dockerfile
docs/: ARCHITECTURE.md  CONFIGURATION.md  FIRMWARE_MIGRATION.md  FIRST_BOOT.md  HANDOFF_FUSION_GRAPH.md  INDEX.md  MOBILE_ARCHITECTURE.md  MOBILE_INTEGRATION.md  MOBILE_PAIRING.md  MOBILE_SECURITY.md  README.md  SIMULATION.md  gnss-contract.md  index.html  install.sh  style.css  test_install.sh
firmware/: README.md
gui/: Dockerfile.msg  generate_go_msgs.sh  generate_ts_types.sh  go.mod  go.sum  main.go
gui/asserts/: mower_config.schema.json
gui/docs/: docs.go  swagger.json  swagger.yaml
gui/web/: package.json  playwright.config.ts  vitest.config.ts
install/: mowglinext.sh  test_mowglinext.sh
install/compose/: docker-compose.base.yml  docker-compose.cloudflared.yml  docker-compose.foxglove.yml  docker-compose.gps-nmea.yml  docker-compose.gps.yml  docker-compose.gui.yml  docker-compose.lidar-ldlidar.yml  docker-compose.lidar-rplidar.yml  docker-compose.lidar-stl27l.yml  docker-compose.mavros.yml  docker-compose.mqtt.yml  docker-compose.tfluna-edge.yml  docker-compose.tfluna-front.yml  docker-compose.ublox.yaml  docker-compose.unicore.yaml  docker-compose.vesc.yml  docker-compose.watchtower.yml
install/config/: f9p_rover.yaml  start_gps.sh
install/lib/: backend_choice.sh  banner.sh  checks.sh  common.sh  compose.sh  config.sh  deploy.sh  docker.sh  env.sh  gps.sh  lidar.sh  motd.sh  progress.sh  range.sh  rc_local.sh  system.sh  tools.sh  uart.sh  udev.sh
install/tests/: test_compose_validity.sh  test_env_output.sh  (+7 more)
params/: docking_ftc_local_planner.yaml  ftc_local_planner.yaml  gps_params.yaml
ros2/: Dockerfile  Dockerfile.dev  Makefile  README.md
ros2/src/fusion_graph/: CMakeLists.txt  package.xml
ros2/src/fusion_graph/config/: fusion_graph.yaml
ros2/src/fusion_graph/include/fusion_graph/: factors.hpp  fusion_graph_node.hpp  graph_manager.hpp  scan_matcher.hpp
ros2/src/fusion_graph/launch/: fusion_graph.launch.py
ros2/src/fusion_graph/src/: factors.cpp  fusion_graph_node.cpp  graph_manager.cpp  scan_matcher.cpp
ros2/src/fusion_graph/test/: test_factors.cpp  test_perf.cpp
ros2/src/mowgli_brv_planner/: CMakeLists.txt  package.xml
ros2/src/mowgli_brv_planner/include/mowgli_brv_planner/: brv_algorithm.hpp  geometry_utils.hpp  grid_coverage.hpp  mbb.hpp  types.hpp  voronoi_roadmap.hpp
ros2/src/mowgli_brv_planner/src/: brv_algorithm.cpp  brv_planner_node.cpp  geometry_utils.cpp  grid_coverage.cpp  mbb.cpp  voronoi_roadmap.cpp
ros2/src/mowgli_brv_planner/test/: test_brv_algorithm.cpp  test_coverage_scenarios.cpp  test_geometry.cpp  test_grid.cpp  test_mbb.cpp  test_voronoi.cpp
ros2/src/mowgli_unicore_gnss/: CMakeLists.txt  package.xml
ros2/src/mowgli_unicore_gnss/config/: um982.yaml
ros2/src/mowgli_unicore_gnss/include/mowgli_unicore_gnss/: serial_port.hpp  um982_parser.hpp
ros2/src/mowgli_unicore_gnss/src/: serial_port.cpp  um982_node.cpp  um982_parser.cpp
ros2/src/mowgli_unicore_gnss/test/: test_um982_parser.cpp
scripts/: build.sh  ros2_entrypoint.sh  test.sh
sensors/: README.md
src/mowgli_bringup/: CMakeLists.txt  package.xml
src/mowgli_bringup/config/: foxglove_bridge.yaml  hardware_bridge.yaml  localization.yaml  mowgli_robot.yaml  nav2_params.yaml  slam_toolbox.yaml  twist_mux.yaml
src/mowgli_bringup/launch/: full_system.launch.py  mowgli.launch.py  navigation.launch.py  sim_full_system.launch.py  sim_small_garden.launch.py
src/mowgli_bringup/urdf/: mowgli.urdf.xacro
systemd/: mowgli.service
wiki/: AI-Assisted-Contributing.md  Architecture.md  Behavior-Trees.md  Configuration.md  Contributing.md  FAQ.md  GUI.md  Getting-Started.md  Home.md  Simulation.md  User-Guide.md  _Sidebar.md
(+634 files in other folders)
